Fix icon alignment & padding of last-modified bar
Bug: T229440#5490743

--- a/resources/skins.minerva.base.styles/footer.less
+++ b/resources/skins.minerva.base.styles/footer.less
@@ -24,7 +24,6 @@ footer {
 		display: block;
 		color: @lastModifiedBarTextColor;
 		transition: background-color 0.2s ease, color 0.2s ease;
-		padding: 0 @contentPadding;
 	}
 
 	// for compatibility with cached HTML. Can be returned 2 weeks after
@@ -38,8 +37,8 @@ footer {
 	.last-modified-bar__text {
 		@end-padding: @iconGutterWidth + @iconGutterWidth + @iconSize;
 		display: block;
-		height: auto;
 		padding-right: 40px;
+		padding-left: 0;
 		.truncated-text();
 
 		&:before {
